Fixed issue with Footer overlaping

--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -3,10 +3,7 @@
 @tailwind utilities;
 
 
-.main{
- 
-  height: 100vh;
-}
+
 
 .mealList {
   
